--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,4 +9,60 @@
   min-height: 650px;
   padding: 21px 0 93px 0;
   background: url(../img/background.png) center center/cover no-repeat; }
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .header__logo {
+    width: 250px; }
+    .header__logo img {
+      width: 100%; }
+  .header__official {
+    font-size: 15px;
+    line-height: 1.2;
+    font-weight: 500;
+    color: #ffffff;
+    text-align: center; }
+    .header__official span {
+      display: block;
+      font-size: 20px; }
+  .header__phone {
+    display: block;
+    font-size: 18px;
+    line-height: 1.2;
+    font-weight: 700;
+    color: #ffffff;
+    text-decoration: none; }
+    .header__phone:hover {
+      color: white; }
+  .header .button {
+    width: 150px;
+    height: 30px;
+    background-color: #c70101;
+    border: none;
+    border-radius: 5px;
+    font-size: 12px;
+    line-height: 1.2;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-family: 'Museo Sans Cyrl'; }
+  .header__contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end; }
 /*# sourceMappingURL=style.css.map */
