--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,5 +1,4 @@
 
-
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
@@ -13,4 +12,45 @@
     min-height: 650px;
     padding: 21px 0 93px 0;
     background: url(../img/background.png) center (center/cover) no-repeat;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &__logo {
+        width: 250px;
+        img {
+            width: 100%;
+        }
+    }
+    &__official {
+        font-size: 15px;
+        line-height: 1.2;
+        font-weight: 500;
+        color: #ffffff;
+        text-align: center;
+        span {
+            display: block;
+            font-size: 20px;
+        }
+    }
+    &__phone {
+        display: block;
+        font-size: 18px;
+        line-height: 1.2;
+        font-weight: 700;
+        color: #ffffff;
+        text-decoration: none;
+        &:hover {
+            color: white;
+        }
+    }
+    @import '_buttons.scss';
+    &__contacts {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
+    
 }
