--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -12,6 +12,64 @@
     min-height: 650px;
     padding: 21px 0 93px 0;
     background: url(../img/background.png) center (center/cover) no-repeat;
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        margin-top: 90px;
+        @import './buttons';
+    }
+    &__header {
+        font-family: 'Museo Sans Cyrl';
+        font-size: 42px;
+        line-height: 1.2;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #ffffff;
+    }
+    &__subheader {
+        margin-bottom: 67px;
+        margin-top: 17px;
+        font-family: 'Museo Sans Cyrl';
+        font-size: 24px;
+        line-height: 1.2;
+        font-weight: 500;
+        text-transform: uppercase;
+        color: #ffffff;
+    }
+    &__icons {
+        margin-bottom: 67px;
+        width: 425px;
+        display: flex;
+        justify-content: space-between;
+    }
+    &__icon {
+        width: 160px;
+        text-align: center;
+        font-family: 'Museo Sans Cyrl';
+        font-size: 14px;
+        line-height: 1.2;
+        font-weight: 500;
+        color: #ffffff;
+        img {
+            display: block;
+            margin: 0 auto;
+            margin-bottom: 20px;
+        }
+    }
+    &__link {
+        margin-top: 18px;
+        font-family: 'Museo Sans Cyrl';
+        font-size: 16px;
+        line-height: 1.2;
+        font-weight: 500;
+        color: #ffffff;
+        a {
+            color: #ffffff;
+            text-transform: uppercase;
+            text-decoration: underline;
+        }
+    }
 }
 
 .header {
@@ -52,5 +110,4 @@
         flex-direction: column;
         align-items: flex-end;
     }
-    
 }
