--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -208,3 +208,50 @@
 }
 }
 
+.catalog {
+    height: 1062px;
+    padding-bottom: 100px;
+    h1 {
+        text-align: center;
+    }
+    &__tabs {
+        margin: 70px 0 60px 0;
+        list-style-type: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-left: 0;
+    }
+    &__tab {
+        width: 220px;
+        height: 50px;
+        border: 2px solid #d0d0d0;
+        color: #6b6b6b;
+        font-size: 18px;
+        font-weight: 400;
+        text-transform: uppercase;
+        text-align: center;
+        line-height: 48px;
+        transform: skewX(-25deg);
+        margin: 0 5px;
+        cursor: pointer;
+        transition: 0,9s all;
+        &:hover {
+            background-color: #c70101;
+            box-shadow: 3px 3px 20px ;
+            border: none;
+            color: #fff;
+        }
+        div {
+            transform: skewX(25deg);
+        }
+        &_active {
+            color: #fff;
+            background-color: #c70101;
+            border: none;
+        }
+    }
+}
+
+@import './_card_buy';
+
