--- a/src/style/__card_buy.scss
+++ b/src/style/__card_buy.scss
@@ -1,88 +1,172 @@
-.card {
-    margin-bottom: 20px;
-    width: 300px;
-    height: 440px;
-    border: 2px solid #e8e8e8;
-    img {
-        margin: 0 auto;
-        padding: 20px;
-        width: 140px;
-        height: 200px;
+.catalog {
+    padding-bottom: 100px;
+    @import './buttons';
+    &__tabs {
+        margin-top: 70px;
+        list-style-type: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 0;
+        padding-left: 0;
     }
-    &__title {
-        font-family: 'Museo Sans Cyrl';
-        font-size: 25px;
-        line-height: 1.2;
-        font-weight: 700;
-        color: #0d0d0d;
+    &__tab {
+        width: 220px;
+        height: 50px;
+        border: 2px solid #d0d0d0;
+        color: #6b6b6b;
+        font-size: 18px;
+        font-weight: 400;
+        text-transform: uppercase;
         text-align: center;
-        padding-bottom: 16px;
-    }
-    &__subtitle {
-        font-family: 'Museo Sans Cyrl';
-        font-size: 17px;
-        line-height: 1.2;
-        font-weight: 300;
-        color: #0d0d0d;
-        text-align: center;
-        padding-bottom: 17px;
-    }
-    &__more_details {
-        font-family: 'Museo Sans Cyrl';
-        font-size: 14px;
-        line-height: 1.2;
-        font-weight: 500;
-        text-decoration: underline;
-        color: #c70101;
-        text-align: center;
-        padding-bottom: 10px;
+        line-height: 48px;
+        transform: skewX(-25deg);
+        margin: 0 5px;
+        cursor: pointer;
+        transition: 0.5s all;
         &:hover {
-            color: #c70101;
+            box-shadow: 3px 3px 20px #c70101;
+            border: none;
+        }
+        div {
+            transform: skewX(25deg);
+        }
+        &_active {
+            color: #fff;
+            background-color: #c70101;
+            border: none;
         }
     }
-    hr {
-        margin: 0 auto;
-        width: 260px;
-        height: 1px;
-        background-color: black;
-    }
-    &__buy {
-        display: flex;
+    &__content {
+        margin-top: 60px;
+        display: none;
         justify-content: space-between;
-        align-items: center;
-        padding-top: 20px;
+        flex-wrap: wrap;
+        &_active {
+            display: flex;
+        }
     }
-    &__price {
-        padding-left: 20px;
+    &-item {
+        width: 300px;
+        min-height: 440px;
+        border: 2px solid #e8e8e8;
+        padding: 20px 20px 26px 20px;
+        overflow: hidden;
+        margin-bottom: 20px;
+        &__img {
+            display: block;
+            margin: 0 auto;
+            max-width: 100%;
+            height: 200px;
+        }
+        &__subtitle {
+            margin-top: 20px;
+            color: #0d0d0d;
+            font-size: 16px;
+            font-weight: 700;
+            text-align: center;
+        }
+        &__descr {
+            margin-top: 16px;
+            color: #0d0d0d;
+            font-size: 14px;
+            font-weight: 300;
+            text-align: center;
+        }
+        &__link {
+            display: block;
+            margin-top: 17px;
+            color: #c70101;
+            font-size: 14px;
+            font-weight: 500;
+            text-decoration: underline;
+            text-align: center;
+            text-transform: uppercase;
+            &:hover {
+                color: #c70101;
+            }
+        }
+        hr {
+            background-color: #e8e8e8;
+            margin-top: 19px;
+            margin-bottom: 21px;
+            border-bottom: none;
+        }
+        &__footer {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        &__old-price {
+            color: #555555;
+            font-size: 14px;
+            font-weight: 300;
+            text-decoration: line-through;
+        }
+        &__price {
+            color: #050505;
+            font-size: 20px;
+            font-weight: 700;
+        }
+        &__wrapper {
+            display: flex;
+            width: calc(200% + 40px);
+        }
+        &__content {
+            width: 50%;
+            margin-right: 0px;
+            transform: translateX(-100%);
+            transition: 0.5s all;
+            &_active {
+                transform: translateX(0%);
+                margin-right: 20px;
+            }
+        }
+        &__list {
+            position: relative;
+            width: 50%;
+            margin-left: 20px;
+            transform: translateX(0%);
+            padding-right: 20px;
+            transition: 0.5s all;
+            padding-left: 19px;
+            margin-bottom: 0;
+            list-style-type: none;
+            &_active {
+                transform: translateX(-100%);
+                margin-left: 0px;
+            }
+            li {
+                position: relative;
+                color: #555555;
+                font-size: 14px;
+                font-weight: 300;
+                margin-bottom: 20px;
+                &:before {
+                    content: '';
+                    position: absolute;
+                    width: 5px;
+                    height: 5px;
+                    background-color: #c70101;
+                    left: -14px;
+                    top: 7px;
+                }
+            }
+        }
+        &__back {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(calc(-50% - 19px));
+            display: block;
+            color: #c70101;
+            font-size: 14px;
+            font-weight: 500;
+            text-decoration: underline;
+            text-transform: uppercase;
+            &:hover {
+                color: #c70101;
+            }
+        }
     }
-    &__old_price {
-        font-family: 'Museo Sans Cyrl';
-        font-size: 14px;
-        line-height: 1.2;
-        font-weight: 300;
-        color: #555555;
-        text-decoration: line-through;
-        padding-bottom: 9px;
-    }
-    &__actual_price {
-        font-family: 'Museo Sans Cyrl';
-        font-size: 20px;
-        line-height: 1.2;
-        font-weight: 700;
-        color: #050505;
-    }
-    .card__button_buy {
-        margin-right: 19px;
-        width: 131px;
-        height: 40px;
-        background-color: #c70101;
-        border: none;
-        border-radius: 5px;
-        font-size: 12px;
-        line-height: 1.2;
-        font-weight: 500;
-        text-transform: uppercase;
-        color: #ffffff;
-        font-family: 'Museo Sans Cyrl';
-    }
-}     
+}
