--- a/src/style/_buttons.scss
+++ b/src/style/_buttons.scss
@@ -18,5 +18,10 @@
         font-size: 16px;
         line-height: 1.2;
     }
+    &_mini {
+        width: 131px;
+        height: 40px;
+        font-size: 14px;
+    }
 }
 
