--- a/src/css/style.css
+++ b/src/css/style.css
@@ -288,9 +288,8 @@
     left: auto; }
 
 .catalog {
-  height: 1062px;
-  padding-bottom: 100px; }
-  .catalog h1 {
+  min-height: auto; }
+  .catalog h2 {
     text-align: center; }
   .catalog__tabs {
     margin: 70px 0 60px 0;
@@ -336,7 +335,7 @@
       border: none; }
 
 .catalog {
-  padding-bottom: 100px; }
+  padding-bottom: 103px; }
   .catalog .button {
     width: 150px;
     height: 30px;
@@ -532,4 +531,54 @@
       text-transform: uppercase; }
       .catalog-item__back:hover {
         color: #c70101; }
+
+.reviews {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .reviews h2 {
+    text-align: center;
+    font-family: 'Museo Sans Cyrl';
+    font-size: 30px;
+    line-height: 1.2;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #0d0d0d;
+    padding-bottom: 70px; }
+  .reviews__content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row; }
+  .reviews__content-photo {
+    width: 169px;
+    height: 169px;
+    background-color: #0d0d0d;
+    border-radius: 84.5px;
+    margin-right: 62px; }
+  .reviews__content-item {
+    margin-bottom: 102px; }
+  .reviews__content_title {
+    font-family: 'Museo Sans Cyrl';
+    font-size: 18px;
+    line-height: 1.2;
+    font-weight: 700;
+    color: #0d0d0d;
+    padding-bottom: 1px; }
+  .reviews__content_subtitle {
+    font-family: 'Museo Sans Cyrl';
+    font-size: 14px;
+    line-height: 1.2;
+    font-weight: 300;
+    color: #646464;
+    padding-bottom: 20px; }
+  .reviews__content_feedback {
+    font-family: 'Museo Sans Cyrl';
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: 300;
+    color: #0d0d0d; }
 /*# sourceMappingURL=style.css.map */
