--- a/src/css/style.css
+++ b/src/css/style.css
@@ -334,6 +334,39 @@
       background-color: #c70101;
       border: none; }
 
+.top_button {
+  background: url(../icons/top.png) center center/cover no-repeat;
+  background-color: #c70101;
+  position: fixed;
+  bottom: 80px;
+  right: 40px;
+  z-index: 9999;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  cursor: pointer;
+  border-radius: 2px;
+  display: none; }
+
+.top_button-show {
+  display: block; }
+
+.top_button:hover {
+  cursor: pointer;
+  background-color: #333; }
+
+.top_button:active {
+  background-color: #555; }
+
+.button::after {
+  font-family: FontAwesome;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 2em;
+  line-height: 50px;
+  color: #fff; }
+
 .catalog {
   padding-bottom: 103px; }
   .catalog .button {
@@ -581,4 +614,55 @@
     line-height: 1.2;
     font-weight: 300;
     color: #0d0d0d; }
+
+.footer {
+  position: relative;
+  height: 630px; }
+  .footer__info {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    width: 460px;
+    height: 270px;
+    background-color: #c70101;
+    padding: 50px 68px 60px 68px; }
+  .footer__addr {
+    font-family: 'Museo Sans Cyrl';
+    font-size: 20px;
+    line-height: 20px;
+    font-weight: 500;
+    color: #ffffff;
+    text-align: center;
+    padding-bottom: 25px; }
+  .footer__phone {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-family: 'Museo Sans Cyrl';
+    font-size: 20px;
+    line-height: 20px;
+    font-weight: 700;
+    color: #ffffff;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    .footer__phone:hover {
+      color: #ffffff; }
+  .footer__social {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 30px; }
+    .footer__social img {
+      padding-right: 15px; }
+  .footer__social :last-child img {
+    padding-right: 0; }
 /*# sourceMappingURL=style.css.map */
