--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -257,3 +257,6 @@
 @import './_card_buy';
 @import './reviews';
 @import './footer';
+@import './modal_request';
+@import './modal_order';
+@import './modal_thanks';
